welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse
	posFinal:Boolean=false
	while(!posFinal){	
		if(!estFaceMur){
		avance();
		}else{
			gauche();avance();gauche();
		}
	}
}
